--- a/_config.yml
+++ b/_config.yml
@@ -125,9 +125,9 @@ author:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
+    - label: "othersideoflearning"
       icon: "fab fa-fw fa-github"
-       url: "https://github.com/othersideoflearning"
+      # url: "https://github.com/othersideoflearning"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
